tests/valid/control_flow/while_basic.nyx
// while loop — basic
func count_down(n: i32) -> ok
    while n > 0
        pass
