tests/invalid/syntax/self_outside_context.nyx
// Invalid: Self type outside of impl or interface context
func not_a_method(self: Self) -> ok
    pass
